# ctf-expense-manager

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  config.yaml  mock_data.py  pyproject.toml  requirements.txt  server.py  tools.py
.github/workflows/: ci.yml  docker.yml
src/ctf_expense_manager/: __init__.py  mock_data.py  server.py  tools.py
tests/: __init__.py  test_mock_data.py  test_server.py  test_tools.py
